@@ -181,7 +181,7 @@ sub configure
         [ 'Test::PodSpelling'   => { ':version' => '2.006001' } ],
         #[Test::Pod::LinkCheck]     many outstanding bugs
         'Test::Pod::No404s',
-        [ 'Test::Kwalitee'      => { ':version' => '2.06' } ],
+        [ 'Test::Kwalitee'      => { ':version' => '2.06', filename => 'xt/author/kwalitee.t' } ],
         'MojibakeTests',
         [ 'Test::ReportPrereqs' => { ':version' => '0.019', verify_prereqs => 1,
             exists $removed{PodCoverageTests} ? () : ( include => [ 'Pod::Coverage' ] ),
@@ -463,6 +463,7 @@ following F<dist.ini> (following the preamble), minus some optimizations:
     [Test::Pod::No404s]
     [Test::Kwalitee]
     :version = 2.06
+    filename => xt/author/kwalitee.t
     [MojibakeTests]
     [Test::ReportPrereqs]
     :version = 0.019
