@@ -100,12 +100,12 @@ my @expected_files = qw(
     t/00-report-prereqs.t
     xt/author/00-compile.t
     xt/author/eol.t
+    xt/author/kwalitee.t
     xt/author/pod-spell.t
     xt/author/clean-namespaces.t
     xt/release/changes_has_content.t
     xt/release/cpan-changes.t
     xt/release/distmeta.t
-    xt/release/kwalitee.t
     xt/release/minimum-version.t
     xt/release/mojibake.t
     xt/release/pod-coverage.t
