@@ -1,6 +1,7 @@
 Revision history for Dist-Zilla-PluginBundle-Author-ETHER
 
 {{$NEXT}}
+          - move kwalitee.t to xt/author
 
 0.092     2015-04-12 06:18:30Z
           - update all the $VERSION values, not just the first in each file
